Исправить замечания ревьювера